<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Looprac</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_map_main">Explore</string>
    <string name="title_activity_person_info">Person Info</string>
    <string name="title_activity_update_info">Edit</string>
    <string name="title_activity_detail_info">Carpool List</string>
    <string name="title_activity_post_carpool">Post Carpool</string>
    <string name="title_activity_carpool_request">Carpool Info</string>
    <string name="title_activity_notification">Notifications</string>
    <!-- RegisterActivity&AccountActivity -->
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="repassword">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="login">Login</string>
    <!-- RegisterAcitivity -->
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">Phone Number</string>
    <string name="registeras">Register As</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="car">Car Model</string>
    <string name="confirmregister">Sign Up</string>
    <!-- UpdateAcitivity -->
    <string name="confirmupdate">Update</string>
    <!-- MainMapAcitivity -->
    <string name="searchfordestination">Search Destination</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>
    <string name="address">Address</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <!-- PostCarpoolAcitivity -->
    <string name="setprice">Set Price</string>
    <!-- CarpoolListAcitivity -->
    <string name="filter">Filter By Ratings</string>
    <!-- Menu -->
    <string name="cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="personalinfo">Info</string>
    <string name="notification">Notification</string>
    <string name="logout">Log out</string>
    <string name="confirmpost">Post</string>
    <string name="confirmrequest">Confirm Request</string>
    <string name="sendrequest">Request</string>
    <string name="call">Call Driver</string>
    <string name="text">Text Driver</string>
    <string name="refresh">Refresh</string>

</resources>
