<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="looprac.app.MainMapActivity" >
    <item android:id="@+id/action_person_info"
        android:title="@string/personalinfo"
        android:icon="@drawable/ic_action_person"
        android:showAsAction="always"/>
    <item android:id="@+id/action_notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_action_alarms"
        android:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/action_settings"
        android:showAsAction="always" >
        <menu>
            <group>
                <item android:id="@+id/action_refresh_carpool"
                    android:icon="@drawable/ic_action_refresh"
                    android:title="@string/refresh"
                    android:showAsAction="ifRoom|withText" />
                <item android:id="@+id/action_settings"
                    android:icon="@drawable/ic_action_settings"
                    android:title="@string/action_settings"
                    android:showAsAction="ifRoom|withText" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_action_undo"
                    android:title="@string/logout"
                    android:showAsAction="ifRoom|withText"/>
            </group>
        </menu>
    </item>
</menu>
