<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="looprac.app.CarpoolDetailActivity" >
    <item android:id="@+id/sendrequest"
        android:title="@string/sendrequest"
        android:icon="@drawable/ic_action_send_now"
        android:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/action_settings"
        android:showAsAction="always" >
        <menu>
            <group>
                <item android:id="@+id/call"
                    android:icon="@drawable/ic_action_call"
                    android:title="@string/call"
                    android:showAsAction="ifRoom|withText" />
                <item
                    android:id="@+id/text"
                    android:icon="@drawable/ic_action_chat"
                    android:title="@string/text"
                    android:showAsAction="ifRoom|withText"/>
            </group>
        </menu>
    </item>
</menu>
