<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="looprac.app.MainMapActivity">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/maps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.MapFragment"/>

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentTop="true" >
        <SearchView
            android:id="@+id/searchdestination"
            android:queryHint="@string/searchfordestination"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            />
        <Button
            android:id="@+id/carpoollistbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_action_view_as_list"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/starttime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#DDDDDD"
            android:text="@string/starttime"
            android:textColor="#FF8800"/>
        <Button
            android:id="@+id/endtime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="#DDDDDD"
            android:text="@string/endtime"
            android:textColor="#FF8800"/>
        <Button
            android:id="@+id/confirmschedule"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_action_accept"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar"
        android:layout_above="@+id/bottombar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/recentsearchlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
        <ListView
            android:id="@+id/searchresultlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>
